refactor: worker-daily now iterates across top 20 trends
- if NODE_ENV = debug, google api response is output to a file as well
as logged to console

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,10 @@
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "program": "${workspaceFolder}\\worker-daily\\index.js"
+      "program": "${workspaceFolder}\\worker-daily\\index.js",
+      "env": {
+        "NODE_ENV": "debug"
+      }
     }
   ]
 }
