feat: implement top 20 trends stored per state
- this is done using process.js (relies on the exported .txt files from
index.js)
- results to about 37KB. This can be shrinked by assigning "topics" an
ID

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "program": "${workspaceFolder}\\worker-daily\\index.js",
+      "program": "${file}",
       "env": {
         "NODE_ENV": "debug"
       }
