--- a/k8s-example/worker-deployment.yml
+++ b/k8s-example/worker-deployment.yml
@@ -23,6 +23,8 @@ spec:
               memory: "128Mi"
               cpu: "0.1"
           env:
+            - name: MAX_TREND_LIMIT
+              value: "1"
             # redis config
             - name: REDIS_HOST
               value: redis-cluster-ip-service
