BREAKING CHANGE(worker): extrapolate explorer api
- init a sort of default/config for google trend explorer/trends api settings
- trying to flatten out the step-by-step logic to fetch/process this data (in index.js); previously I relied on deeply nested callbacks to get the job done (write to files, then read from them for processing)
- now, I want to replace the fs writes with writing into an object and storing it in redis or memory prior to processing
- and after processing is complete, publish to redis

BREAKING CHANGE
- so there appears to be an error processing the JSON string that is converted from a byte stream (contains the state-level data per trending topic) "Unexpected end of JSON output
- once that is fixed, I need to promisify the write streams so that I can fetch the data from memory and pass it to the processing algorithm; right now, this data is null due to the event loop/async nature of JS

--- a/k8s-example/worker-deployment.yml
+++ b/k8s-example/worker-deployment.yml
@@ -23,6 +23,8 @@ spec:
               memory: "128Mi"
               cpu: "0.1"
           env:
+            - name: GOOGLE_GEO_COUNTRY_CODE
+              value: "US"
             - name: MAX_TREND_LIMIT
               value: "1"
             # redis config
