feat(worker): write client ready data to redis
- the key it is written to in redis is defined in the ENV variables! default: daily
- add docs for processor.process

--- a/k8s-example/worker-deployment.yml
+++ b/k8s-example/worker-deployment.yml
@@ -28,6 +28,8 @@ spec:
             - name: MAX_TREND_LIMIT
               value: "1"
             # redis config
+            - name: REDIS_DAILY_TRENDS_KEY
+              value: "daily"
             - name: REDIS_HOST
               value: redis-cluster-ip-service
             - name: REDIS_PORT
