feat(worker): implement cronjob
- daily tasks are re-updated every 1 minute by default, defined by env var, or defaults to 30 minutes
- on first-run, the code will execute the index.run() method immediately
- all subsequent executions are handled by the node cronjob

--- a/k8s-example/worker-deployment.yml
+++ b/k8s-example/worker-deployment.yml
@@ -23,6 +23,12 @@ spec:
               memory: "128Mi"
               cpu: "0.1"
           env:
+            # crontab config
+            - name: CRON_EXPRESSION
+              value: "1 * * * * *"
+            - name: CRON_TIMEZONE
+              value: "America/Chicago"
+            # google api config
             - name: GOOGLE_GEO_COUNTRY_CODE
               value: "US"
             - name: MAX_TREND_LIMIT
