--- a/k8s-example/worker-deployment.yml
+++ b/k8s-example/worker-deployment.yml
@@ -38,8 +38,10 @@ spec:
             # redis config
             - name: REDIS_DAILY_TRENDS_KEY
               value: "daily"
-            - name: REDIS_REALTIME_TRENDS_KEY
-              value: "realtime"
+            - name: REDIS_DAILY_TRENDS_BY_STATE_KEY
+              value: "daily-state"
+            - name: REDIS_REALTIME_TRENDS_BY_STATE_KEY
+              value: "realtime-state"
             - name: REDIS_HOST
               value: redis-cluster-ip-service
             - name: REDIS_PORT
