--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,13 @@
     "@testing-library/user-event": "^7.1.2",
     "debug": "^4.2.0",
     "invert-color": "^2.0.0",
-    "material-table": "^1.69.1",
+    "namor": "^2.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-simple-maps": "^2.1.2",
+    "react-table": "^7.6.0",
     "react-tooltip": "^4.2.10"
   },
   "scripts": {
