--- a/client/package.json
+++ b/client/package.json
@@ -11,15 +11,20 @@
     "@testing-library/user-event": "^7.1.2",
     "debug": "^4.2.0",
     "invert-color": "^2.0.0",
+    "jspdf": "^2.1.1",
+    "jspdf-autotable": "^3.5.13",
     "match-sorter": "^5.0.0",
     "namor": "^2.0.2",
+    "papaparse": "^5.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-simple-maps": "^2.1.2",
     "react-table": "^7.6.0",
-    "react-tooltip": "^4.2.10"
+    "react-table-plugins": "^1.3.1",
+    "react-tooltip": "^4.2.10",
+    "xlsx": "^0.16.8"
   },
   "scripts": {
     "start": "react-scripts start",
