--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-share": "^4.3.1",
     "react-simple-maps": "^2.1.2",
     "react-table": "^7.6.0",
     "react-table-plugins": "^1.3.1",
