--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "debug": "^4.2.0",
+    "html-entities": "^1.3.1",
     "invert-color": "^2.0.0",
     "jspdf": "^2.1.1",
     "jspdf-autotable": "^3.5.13",
