--- a/worker-cities/package.json
+++ b/worker-cities/package.json
@@ -13,7 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cron": "^1.8.2",
+    "cron-parser": "^2.16.3",
     "dotenv": "^8.2.0",
+    "ioredis": "^4.19.1",
     "node-fetch": "^2.6.1",
     "oauth": "^0.9.15"
   }
