--- a/worker-cities/.env-example
+++ b/worker-cities/.env-example
@@ -2,3 +2,9 @@ CENSUS_API_KEY=
 YAHOO_APP_ID=
 YAHOO_CLIENT_ID=
 YAHOO_SECRET=
+REDIS_PORT=6379
+REDIS_HOST=localhost
+REDIS_PASSWORD=""
+REDIS_DB=0
+REDIS_FAMILY=4
+REDIS_TTL=3600
