feat(cities): add mongo, update example deployments
- add deployment for mongodb; it has a persistent volume
- add redis load balancer for access to it from the docker host on
port 27017
- create Location Mongoose model
- update Yahoo API response process to UPSERT a new Location record in
mongodb based on the censusPlaceId. After processing, the Location is
returned as a plain JS object, which is then inserted into the map
- the map is still cached in redis (worker-twitter should search cache
for this map, or build it itself if it exists in the database, or fail
accordingly...)

--- a/k8s/examples/redis-deployment.yml
+++ b/k8s/examples/redis-deployment.yml
@@ -6,15 +6,15 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      component: redis
+      component: redis-deployment
   template:
     metadata:
       labels:
-        component: redis
+        component: redis-deployment
     spec:
       containers:
         - name: redis
-          image: redis
+          image: codihuston/ustrending-redis
           resources:
             requests:
               memory: "24Mi"
@@ -24,17 +24,3 @@ spec:
               cpu: "0.1"
           ports:
             - containerPort: 6379
-          env:
-            # redis config
-            - name: REDIS_HOST
-              value: redis-cluster-ip-service
-            - name: REDIS_PORT
-              value: "6379"
-            - name: REDIS_DB
-              value: "0"
-            - name: REDIS_PASSWORD
-              value: ""
-            - name: REDIS_DB
-              value: "0"
-            - name: REDIS_FAMILY
-              value: "4"
