--- a/k8s/examples/redis-cluster-ip.yml
+++ b/k8s/examples/redis-cluster-ip.yml
@@ -5,7 +5,21 @@ metadata:
 spec:
   type: ClusterIP
   selector:
-    component: redis
+    component: redis-deployment
   ports:
   - port: 6379
     targetPort: 6379
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: redis-load-balancer
+spec:
+  type: LoadBalancer
+  ports:
+    - name: redis-load-balancer
+      port: 6379
+      targetPort: 6379
+      protocol: TCP
+  selector:
+    component: redis-deployment
