--- a/worker-cities/.env-example
+++ b/worker-cities/.env-example
@@ -4,7 +4,12 @@ YAHOO_CLIENT_ID=
 YAHOO_SECRET=
 REDIS_PORT=6379
 REDIS_HOST=localhost
-REDIS_PASSWORD=""
+REDIS_PASSWORD=
 REDIS_DB=0
 REDIS_FAMILY=4
-REDIS_TTL=3600
+REDIS_TTL=86400
+MONGO_HOST=localhost
+MONGO_PORT=27017
+MONGO_USERNAME=
+MONGO_PASSWORD=
+MONGO_DB=ustrending
