--- a/worker-cities/package.json
+++ b/worker-cities/package.json
@@ -15,8 +15,11 @@
   "dependencies": {
     "cron": "^1.8.2",
     "cron-parser": "^2.16.3",
+    "debug": "^4.2.0",
     "dotenv": "^8.2.0",
     "ioredis": "^4.19.1",
+    "mongoose": "^5.10.11",
+    "mongoose-geojson-schema": "^2.1.5",
     "node-fetch": "^2.6.1",
     "oauth": "^0.9.15"
   }
