refactor(server): rename to public-api
- am creating a private-api to centralize some of the repetitive codebase (services used in the workers)
- the public api is consumed only by the client, perhaps this will only implement db reads, and in the future, publish data thru websocket
- the private api (coming soon) will serve the workers; this API will make db writes

--- a/k8s/examples/public-api-deployment.yml
+++ b/k8s/examples/public-api-deployment.yml
@@ -1,27 +1,27 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: server-deployment
+  name: public-api-deployment
 spec:
   replicas: 1
   selector:
     matchLabels:
-      component: server
+      component: public-api
   template:
     metadata:
       labels:
-        component: server
+        component: public-api
     spec:
       containers:
-        - name: server
-          image: REPLACE_ME_WITH_YOUR_DOCKER_ID/ustrending-server
+        - name: public-api
+          image: REPLACE_ME_WITH_YOUR_DOCKER_ID/ustrending-public-api
           resources:
             requests:
-              memory: "256Mi"
-              cpu: "0.2"
+              memory: "1Gi"
+              cpu: "1"
             limits:
-              memory: "256Mi"
-              cpu: "0.2"
+              memory: "1Gi"
+              cpu: "1"
           ports:
             - containerPort: 3000
           env:
