--- a/k8s/examples/public-api-cluster-ip-service.yml
+++ b/k8s/examples/public-api-cluster-ip-service.yml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: server-cluster-ip-service
+  name: public-api-cluster-ip-service
 spec:
   type: ClusterIP
   selector:
-    component: server
+    component: public-api
   ports:
   - port: 3000
     targetPort: 3000
