--- a/skaffold/skaffold-example.yml
+++ b/skaffold/skaffold-example.yml
@@ -4,8 +4,8 @@ build:
   local:
     push: false
   artifacts:
-    - image: REPLACE_ME_WITH_YOUR_DOCKER_ID/ustrending-server
-      context: ../server
+    - image: REPLACE_ME_WITH_YOUR_DOCKER_ID/ustrending-public-api
+      context: ../public-api
       docker:
         dockerfile: Dockerfile.dev
       sync:
