--- a/skaffold/skaffold-example.yml
+++ b/skaffold/skaffold-example.yml
@@ -10,6 +10,12 @@ build:
         dockerfile: Dockerfile.dev
       sync:
         '***/*.js': .
+    - image: REPLACE_ME_WITH_YOUR_DOCKER_ID/ustrending-private-api
+      context: ../private-api
+      docker:
+        dockerfile: Dockerfile.dev
+      sync:
+        '***/*.js': .
     - image: REPLACE_ME_WITH_YOUR_DOCKER_ID/ustrending-client
       context: ../client
       docker:
