--- a/private-api/package.json
+++ b/private-api/package.json
@@ -13,6 +13,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "ioredis": "^4.17.3",
+    "mongoose": "^5.10.11",
+    "mongoose-geojson-schema": "^2.1.5",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
