refactor(private-api): expose private-api to localhost
- FOR DEVELOPMENT ONLY, WILL NOT PERSIST INTO PRODUCTION!!!
- ONLY THE WORKERS will have write access to the databases via the Private API!!!
- the PUBLIC API is only for the client to consume!

--- a/k8s/examples/ingress-service.yml
+++ b/k8s/examples/ingress-service.yml
@@ -9,11 +9,18 @@ spec:
   rules:
     - http:
         paths:
-          - path: /?(.*)
-            backend:
-              serviceName: client-cluster-ip-service
-              servicePort: 3000
           - path: /api/?(.*)
             backend:
               serviceName: public-api-cluster-ip-service
+              servicePort: 3000
+          # DEVELOPMENT PURPOSES ONLY, WILL NOT BE PUBLIC-FACING IN PRODUCITON!
+          # DO NOT USE THIS HANDLE IN ANY CODEBASE, THIS IS SO YOU CAN TEST
+          # IN THE BROWSER IF NEEDED! IT WILL NOT BE AVAILABLE IN PRODUCITON!!!
+          - path: /private-api/?(.*)
+            backend:
+              serviceName: private-api-cluster-ip-service
+              servicePort: 3000
+          - path: /?(.*)
+            backend:
+              serviceName: client-cluster-ip-service
               servicePort: 3000
