--- a/k8s/examples/private-api-deployment.yml
+++ b/k8s/examples/private-api-deployment.yml
@@ -42,7 +42,7 @@ spec:
               value: "10"
             # mongo db config
             - name: MONGO_HOST
-              value: mongo-cluster-ip-ervice
+              value: mongo-cluster-ip-service
             - name: MONGO_PORT
               value: "27017"
             - name: MONGO_USERNAME
