--- a/worker-google/package.json
+++ b/worker-google/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.21.0",
     "cron": "^1.8.2",
     "cron-parser": "^2.16.3",
     "cross-env": "^7.0.2",
@@ -18,7 +19,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "dev": "cross-env NODE_ENV=development DEBUG=worker:* nodemon index.js -e js"
+    "dev": "cross-env NODE_ENV=development DEBUG=worker:index nodemon index.js -e js"
   },
   "author": "",
   "license": "ISC"
