--- a/private-api/package.json
+++ b/private-api/package.json
@@ -15,7 +15,8 @@
     "ioredis": "^4.17.3",
     "mongoose": "^5.10.11",
     "mongoose-geojson-schema": "^2.1.5",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "oauth": "^0.9.15"
   },
   "devDependencies": {
     "nodemon": "^2.0.5"
