--- a/worker-cities/package.json
+++ b/worker-cities/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cross-env DEBUG=worker-cities:* node index.js",
+    "dev": "cross-env DEBUG=worker-cities:* node index.js -e js",
     "start": "node index.js"
   },
   "author": "",
