--- a/private-api/package.json
+++ b/private-api/package.json
@@ -7,6 +7,7 @@
     "dev": "cross-env DEBUG=private-api:* nodemon ./bin/www "
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "cookie-parser": "~1.4.4",
     "cross-env": "^7.0.2",
     "debug": "^2.6.9",
