--- a/k8s/examples/public-api-deployment.yml
+++ b/k8s/examples/public-api-deployment.yml
@@ -25,6 +25,11 @@ spec:
           ports:
             - containerPort: 3000
           env:
+            # private api config
+            - name: PRIVATE_API_HOST
+              value: private-api-cluster-ip-service.default.svc.cluster.local
+            - name: PRIVATE_API_PORT
+              value: "3000"
             # redis config
             - name: REDIS_HOST
               value: redis-cluster-ip-service
@@ -34,3 +39,14 @@ spec:
               value: "0"
             - name: REDIS_RECONNECT_ATTEMPTS
               value: "10"
+            # mongo db config
+            - name: MONGO_HOST
+              value: mongo-cluster-ip-service
+            - name: MONGO_PORT
+              value: "27017"
+            - name: MONGO_USERNAME
+              value: ""
+            - name: MONGO_PASSWORD
+              value: ""
+            - name: MONGO_DB
+              value: ustrending
