--- a/public-api/package.json
+++ b/public-api/package.json
@@ -14,6 +14,9 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "ioredis": "^4.17.3",
+    "joi": "^17.3.0",
+    "mongoose": "^5.10.13",
+    "mongoose-geojson-schema": "^2.1.5",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
