feat(mongodb): add places
- twitter places with geospatial coordinates added to the data store

--- a/mongodb/Dockerfile.dev
+++ b/mongodb/Dockerfile.dev
@@ -1,3 +1,4 @@
 FROM mongo
 COPY ./dump/locations.json /locations.json
+COPY ./dump/places.json /places.json
 COPY ./dump/zipcodes.json /zipcodes.json
