--- a/public-api-go/Dockerfile.dev
+++ b/public-api-go/Dockerfile.dev
@@ -1,4 +1,4 @@
-FROM golang:alpine
+FROM golang:alpine AS build
 WORKDIR "/app"
 # copy in dep manifests
 COPY go.mod go.sum ./
@@ -8,4 +8,9 @@ RUN go mod download
 COPY . .
 # build the go app
 RUN go build -o app .
+#RUN go install main.go
+
+FROM alpine:latest
+WORKDIR "/app"
+COPY --from=build "./app/app" .
 CMD ["./app"]
