--- a/k8s/examples/ingress-service.yml
+++ b/k8s/examples/ingress-service.yml
@@ -13,12 +13,23 @@ spec:
             backend:
               serviceName: public-api-cluster-ip-service
               servicePort: 3000
+          - path: /api-go/?(.*)
+            backend:
+              serviceName: public-api-go-cluster-ip-service
+              servicePort: 3000
           # DEVELOPMENT PURPOSES ONLY, WILL NOT BE PUBLIC-FACING IN PRODUCITON!
           # DO NOT USE THIS HANDLE IN ANY CODEBASE, THIS IS SO YOU CAN TEST
           # IN THE BROWSER IF NEEDED! IT WILL NOT BE AVAILABLE IN PRODUCITON!!!
           - path: /private-api/?(.*)
             backend:
               serviceName: private-api-cluster-ip-service
+              servicePort: 3000
+          # DEVELOPMENT PURPOSES ONLY, WILL NOT BE PUBLIC-FACING IN PRODUCITON!
+          # DO NOT USE THIS HANDLE IN ANY CODEBASE, THIS IS SO YOU CAN TEST
+          # IN THE BROWSER IF NEEDED! IT WILL NOT BE AVAILABLE IN PRODUCITON!!!
+          - path: /trends-api/?(.*)
+            backend:
+              serviceName: trends-api-cluster-ip-service
               servicePort: 3000
           - path: /?(.*)
             backend:
