feat(worker-trends): create worker for trends
- this will handle the recurrent fetching of trends from google/twitter
- this is not to handle the stream reading (if I ever implement that), only the daily google trends and state rankings, and twitter trends for places
- currently only works for google trends, since I haven't implemented twitter yet
-  will run an initial setup (should work so long as the api is listening before the worker runs)
- will run every 1 minute, and every 30th minute of the hour; will need to determine how to configure this for dev / prod respectively

--- a/skaffold/skaffold-example.yml
+++ b/skaffold/skaffold-example.yml
@@ -23,6 +23,10 @@ build:
       context: ../trends-api
       docker:
         dockerfile: Dockerfile.dev
+    - image: REPLACE_ME_WITH_YOUR_DOCKER_ID/ustrending-worker-trends
+      context: ../worker-trends
+      docker:
+        dockerfile: Dockerfile.dev
     - image: REPLACE_ME_WITH_YOUR_DOCKER_ID/ustrending-client
       context: ../client
       docker:
