--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "axios": "^0.21.1",
     "debug": "^4.3.1",
     "html-entities": "^2.1.0",
     "invert-color": "^2.0.0",
