--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
     "react-query": "^3.6.0",
+    "react-select": "^4.0.2",
     "react-simple-maps": "^2.3.0",
     "react-table": "^7.6.3",
     "xlsx": "^0.16.9"
