--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@types/react-select": "^4.0.11",
+    "@types/react-simple-maps": "^1.0.3",
     "axios": "^0.21.1",
     "debug": "^4.3.1",
     "html-entities": "^2.1.0",
@@ -27,6 +28,7 @@
     "react-select": "^4.0.2",
     "react-simple-maps": "^2.3.0",
     "react-table": "^7.6.3",
+    "react-tooltip": "^4.2.13",
     "xlsx": "^0.16.9"
   },
   "devDependencies": {
