--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@types/lodash": "^4.14.168",
     "@types/react-select": "^4.0.11",
     "@types/react-simple-maps": "^1.0.3",
     "axios": "^0.21.1",
@@ -18,6 +19,7 @@
     "html-entities": "^2.1.0",
     "invert-color": "^2.0.0",
     "jspdf": "^2.3.0",
+    "lodash": "^4.17.20",
     "match-sorter": "^6.1.0",
     "next": "10.0.6",
     "papaparse": "^5.3.0",
