--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@types/lodash": "^4.14.168",
     "@types/react-select": "^4.0.11",
     "@types/react-simple-maps": "^1.0.3",
+    "@types/react-table": "^7.0.28",
     "axios": "^0.21.1",
     "debug": "^4.3.1",
     "html-entities": "^2.1.0",
