fix: missing caBundle in ingress-example

--- a/k8s/ingress-nginx-example.yml
+++ b/k8s/ingress-nginx-example.yml
@@ -438,6 +438,7 @@ webhooks:
           - ingresses
     failurePolicy: Fail
     clientConfig:
+      caBundle: ""
       service:
         namespace: ingress-nginx
         name: ingress-nginx-controller-admission
