docs+build: fix mac mongodb volume
- the /tmp/ustrending-k8s directory specified as a hostPath mount volume did not work
- it works if you specify a path in your user profile instead
- clarified this step in the docs

--- a/k8s/examples/mongo-deployment.yml
+++ b/k8s/examples/mongo-deployment.yml
@@ -56,6 +56,6 @@ spec:
             #path: /run/desktop/mnt/host/c/programdata/ustrending-k8s
             # for mac/linux (untested)
             #   (explorable @ /tmp)
-            #path: /tmp/ustrending-k8s
+            #path: /Users/your-username/ustrending-k8s
             type: DirectoryOrCreate
             
